Bug 65452 - Strings within structs are not properly read
Summary: Strings within structs are not properly read
Status: RESOLVED FIXED
Alias: None
Product: libmbim
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Aleksander Morgado
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-06 10:45 UTC by Aleksander Morgado
Modified: 2013-06-06 11:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Aleksander Morgado 2013-06-06 10:45:04 UTC
The offset specified for a string when it is within a struct is referred to the struct origin, not to the information buffer origin.
Comment 1 Aleksander Morgado 2013-06-06 11:21:09 UTC
Fixed in git master, ea51336e218c656b01fdca1bad1ca0b52484dc9d.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.