libmbim-glib: fix reading strings within structs

https://bugs.freedesktop.org/show_bug.cgi?id=65452