libmbim-glib/mbim-message.h
@@ -130,9 +130,11 @@ guint32         *_mbim_message_read_guint32_array (const MbimMessage *self,
 guint64          _mbim_message_read_guint64       (const MbimMessage *self,
                                                    guint64            relative_offset);
 gchar           *_mbim_message_read_string        (const MbimMessage *self,
+                                                   guint32            struct_start_offset,
                                                    guint32            relative_offset);
 gchar          **_mbim_message_read_string_array  (const MbimMessage *self,
                                                    guint32            array_size,
+                                                   guint32            struct_start_offset,
                                                    guint32            relative_offset_array_start);
 const MbimUuid  *_mbim_message_read_uuid          (const MbimMessage *self,
                                                    guint32            relative_offset);
