build-aux/mbim-codegen/Struct.py
@@ -318,13 +318,13 @@ class Struct:
             elif field['format'] == 'string':
                 inner_template += (
                     '\n'
-                    '    out->${field_name_underscore} = _mbim_message_read_string (self, offset);\n'
+                    '    out->${field_name_underscore} = _mbim_message_read_string (self, relative_offset, offset);\n'
                     '    offset += 8;\n')
             elif field['format'] == 'string-array':
                 translations['array_size_field_name_underscore'] = utils.build_underscore_name_from_camelcase(field['array-size-field'])
                 inner_template += (
                     '\n'
-                    '    out->${field_name_underscore} = _mbim_message_read_string_array (self, out->${array_size_field_name_underscore}, offset);\n'
+                    '    out->${field_name_underscore} = _mbim_message_read_string_array (self, out->${array_size_field_name_underscore}, relative_offset, offset);\n'
                     '    offset += (8 * out->${array_size_field_name_underscore});\n')
             elif field['format'] == 'ipv4':
                 inner_template += (
